# together

./: .gitignore  Cargo.toml  DESIGN.md  PROCESS.md  README.md  VISION.md  fuzz.sh
benches/: profile_bench.rs  quick_bench.rs  rga_comparison.rs  rga_quick.rs  rga_trace.rs  version_bench.rs
benchmarks/: .gitignore  README.md
benchmarks/js/: bench.js  package-lock.json  package.json
benchmarks/rust/: Cargo.toml
comparisons/: README.md
comparisons/criterion/: Cargo.toml  profile_bench.rs  quick_bench.rs
comparisons/criterion/benches/: rga_trace.rs
comparisons/rust/src/: main.rs
crates/pedagogy/: Cargo.toml
crates/pedagogy/src/: cola.rs  diamond.rs  json_joy.rs  key.rs  lib.rs  log_integration.rs  (+4 more)
examples/: profile_test.rs
procedures/: 00-optimize.md  01-crdt-comparison-study.md  01-versioning-logical.md  01-versioning-persistent.md  02-fix-algorithm.md  03-crdt-comparison-study.md  03-versioning-checkpoint.md  04-insert-optimization.md  05-coverage-gap-testing.md
research/: 00-dat.md  01-diamond-types.md  02-skip-list.md  03-skip-list-debug.md  04-rga-skip-list-integration.md  05-weighted-skip-list.md  06-optimization-lessons.md  07-jumprope-analysis.md  08-next-optimizations.md  09-crdts-go-brrr-notes.md  10-diamond-types-notes.md  11-jumprope-notes.md  12-optimization-plan.md  13-future-optimizations.md  13-weighted-skip-list-lessons.md  14-optimization-phase-2.md  15-optimization-phase-2-prompt.md  16-optimization-summary.md  17-crdt-comparison-progress.md  17-document-api.md  18-checkpoint-retention.md  19-versioning-benchmark-results.md  20-jsonjoy-blazing-fast-list-crdt.md  21-jsonjoy-list-crdt-benchmarks.md  22-jsonjoy-fuzz-testing-rga.md  23-jsonjoy-plain-text-sync.md  24-jsonjoy-collab-text-prelude.md  25-jsonjoy-optimization-ideas-summary.md  26-zed-crdt-analysis.md  27-crdt-benchmark-summary.md  28-rga-merge-issues.md  29-rga-fix-approach.md  30-rga-merge-postmortem.md  31-crdt-deep-dive.md  32-rga-fix-session.md  33-insert-span-refactor.md  34-crdt-comparison-progress.md  34-epoch-based-optimization.md  36-crdt-diamond-types.md  38-crdt-json-joy.md  (+9 more)
scripts/: 00-next-numbered
src/: collection.rs  index_tree.rs  key.rs  lib.rs  log.rs  main.rs  rope.rs  tree_log.rs
src/crdt/: btree_list.rs  cola.rs  diamond.rs  json_joy.rs  log_integration.rs  loro.rs  mod.rs  op.rs  profiling.rs  rga.rs  rga_optimized.rs  rope.rs  skip_list.rs  weighted_list.rs  weighted_skip_list.rs  yjs.rs
tests/: coverage_gaps.rs  debug_merge.rs  document_api.rs  document_api_proptest.rs  rga_conformance.rs  rga_fuzz.proptest-regressions  rga_fuzz.rs  trace_correctness.rs
worklog/: 00-initial-implementation.md  01-optimization-session.md  02-optimization-phase-2.md  03-comparison-benchmarks.md  03-more-benchmarks.md  04-fuzz-testing-session.md  04-origin-index-optimization.md  05-optimization-session.md  06-crdt-comparison-study.md  07-insert-optimization.md  08-split-continuation-fix.md
(+8 files in other folders)
