[package]
name = "together"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1"
rustc-hash = "2"
smallvec = "1"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
proptest = "1.9.0"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diamond-types = "1"  # Reference implementation for correctness testing

[[bench]]
name = "version_bench"
harness = false
