[package]
name = "together"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
blake3 = "1"
rustc-hash = "2"
smallvec = "1"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
proptest = "1.9.0"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diamond-types = "1"  # Reference implementation for correctness testing
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "version_bench"
harness = false

[[bench]]
name = "rga_comparison"
harness = false

[[bin]]
name = "rga_quick"
path = "benches/rga_quick.rs"
required-features = ["bench"]

[features]
bench = ["rand"]

[dependencies.rand]
version = "0.8"
optional = true
